# v3

./: .dockerignore  .env.example  .gitignore  BLOG.md  Dockerfile  README.md  app.py  eval.py  hello.txt  inference.py  openenv.yaml  operations.txt  problem_statement.md  pyproject.toml  requirements.txt  run_demo.py  train.py  training_metrics.csv
agents/: __init__.py
evaluation/: reporting.py  runner.py
postman/: AACE-OpenEnv.postman_collection.json
reports/: metrics.json  plots.py  report.json
server/: __init__.py  app.py  stateful_http.py
tests/: test_contract.py  test_env.py  test_graders.py  test_http_session.py  test_multi_agent.py  test_tasks.py
training/: model_latest.json  policies.py  ppo_loop.py  reward_fn.py
ui/: live_renderer.py  orchestration_view.py  replay_engine.py
